--- a/index.html
+++ b/index.html
@@ -18,7 +18,42 @@
 <body>
     <!-- APP VUE -->
     <div id="app">
-
+        <h1>Vue ToDo List</h1>
+        <div class="container">
+            <h2>Inserisci, modifica e organizza i tuoi impegni</h2>
+            <input type="text" placeholder="Inserisci qui il tuo impegno">
+            <button>Add</button>
+            <div class="list">
+                <div class="content" >
+                    <span>Impegno</span>
+                    <div class="icons">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-backspace"></i>
+                    </div>
+                </div>
+                <div class="content" >
+                    <span>Impegno</span>
+                    <div class="icons">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-backspace"></i>
+                    </div>
+                </div>
+                <div class="content" >
+                    <span class="complete">Impegno</span>
+                    <div class="icons">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-backspace"></i>
+                    </div>
+                </div>
+                <div class="content" >
+                    <span>Impegno</span>
+                    <div class="icons">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-backspace"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <!-- END APP VUE -->
     </div>
