stampa elementi in DOM

--- a/index.html
+++ b/index.html
@@ -24,36 +24,18 @@
             <input type="text" placeholder="Inserisci qui il tuo impegno">
             <button>Add</button>
             <div class="list">
-                <div class="content" >
-                    <span>Impegno</span>
-                    <div class="icons">
-                        <i class="fas fa-edit"></i>
-                        <i class="fas fa-backspace"></i>
-                    </div>
-                </div>
-                <div class="content" >
-                    <span>Impegno</span>
-                    <div class="icons">
-                        <i class="fas fa-edit"></i>
-                        <i class="fas fa-backspace"></i>
-                    </div>
-                </div>
-                <div class="content" >
-                    <span class="complete">Impegno</span>
-                    <div class="icons">
-                        <i class="fas fa-edit"></i>
-                        <i class="fas fa-backspace"></i>
-                    </div>
-                </div>
-                <div class="content" >
-                    <span>Impegno</span>
-                    <div class="icons">
-                        <i class="fas fa-edit"></i>
-                        <i class="fas fa-backspace"></i>
+                <div class="content" v-for="elemento in lista">
+                    <div class="container-item">
+                        <span>{{elemento.impegno}}</span>
+                        <div class="icons">
+                            <i class="fas fa-edit"></i>
+                            <i class="fas fa-backspace"></i>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
     <!-- END APP VUE -->
     </div>
