--- a/index.html
+++ b/index.html
@@ -21,15 +21,25 @@
         <h1>Vue ToDo List</h1>
         <div class="container">
             <h2>Inserisci, modifica e organizza i tuoi impegni</h2>
-            <input ref="input" v-model="newItem" @keyup.enter="inserisci" type="text" placeholder="Inserisci qui il tuo impegno">
+            <input ref="input" v-model.trim="newItem" @keyup.enter="inserisci" type="text" placeholder="Inserisci qui il tuo impegno">
             <button @click="inserisci" >Add</button>
+
+            <!-- LIST -->
             <div class="list">
                 <div class="content" v-for="(elemento, index) in lista">
                     <div class="container-item">
-                        <span>{{elemento.impegno}}</span>
+                        <span 
+                            :class="{complete: elemento.completato}" 
+                            @click="completo(elemento)">
+                            {{elemento.impegno}}
+                        </span>
+                        <!-- ICONS -->
                         <div class="icons">
                             <i class="fas fa-edit"></i>
-                            <i class="fas fa-backspace" @click="cancella(index)"></i>
+                            <i 
+                                class="fas fa-backspace" 
+                                @click="cancella(index)">
+                            </i>
                         </div>
                     </div>
                 </div>
